<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference app:key="documentation" app:title="@string/settings_documentation_title" app:summary="@string/settings_documentation_summary" />
    <Preference app:key="replay_tour" app:title="@string/tour_replay_title" app:summary="@string/tour_replay_summary" />
    <Preference app:key="report_issue" app:title="@string/settings_send_feedback_title" app:summary="@string/report_issue_preference_summary" />
    <Preference app:key="source_code" app:title="@string/settings_source_code_title" app:summary="@string/settings_source_code_summary" />
    <Preference app:key="about" app:title="@string/settings_version_build_title" app:summary="@string/about_preference_summary" />
    <Preference app:key="open_source_licenses" app:title="@string/open_source_licenses_preference_title" app:summary="@string/open_source_licenses_preference_summary" />
    <Preference app:key="donate" app:title="@string/donate_preference_title" app:summary="@string/donate_preference_summary" app:isPreferenceVisible="false" />
</PreferenceScreen>
