<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_use_case_header">
        <com.termux.app.fragments.settings.SegmentedPillPreference
            app:key="app_launcher_use_case_mode"
            app:title="@string/settings_use_case_title"
            app:summary="@string/settings_use_case_summary"
            app:defaultValue="launcher" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_pinned_apps_header">
        <SwitchPreferenceCompat
            app:key="app_launcher_row_haptics"
            app:title="@string/settings_app_index_haptics_title"
            app:summary="@string/settings_app_index_haptics_summary"
            android:defaultValue="true" />
        <Preference
            app:key="app_launcher_default_buttons"
            app:title="@string/settings_edit_pinned_apps_title"
            app:summary="@string/settings_edit_pinned_apps_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_app_browsing_header">
        <SwitchPreferenceCompat
            app:key="app_launcher_notification_dots"
            app:title="@string/settings_notification_dots_title"
            app:summary="@string/termux_app_launcher_notification_dots_summary"
            android:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="app_launcher_notification_history"
            app:title="@string/settings_notification_history_title"
            app:summary="@string/settings_notification_history_summary"
            android:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="app_launcher_most_used_page"
            app:title="@string/settings_most_used_page_title"
            app:summary="@string/settings_most_used_page_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_app_drawer_header">
        <SwitchPreferenceCompat
            app:key="app_launcher_drawer_enabled"
            app:title="@string/settings_app_drawer_enabled_title"
            app:summary="@string/settings_app_drawer_enabled_summary"
            android:defaultValue="true" />
        <Preference
            app:key="app_launcher_drawer_layout"
            app:title="@string/settings_app_drawer_view_type_title"
            app:fragment="com.termux.app.fragments.settings.termux.AppDrawerPreferencesFragment" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_home_widgets_header">
        <SwitchPreferenceCompat
            app:key="app_launcher_widget_pane_enabled"
            app:title="@string/settings_widget_pane_enabled_title"
            app:summary="@string/settings_widget_pane_enabled_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_launcher_search_header">
        <EditTextPreference
            app:key="app_launcher_input_char"
            app:title="@string/settings_app_search_prefix_title"
            app:summary="@string/settings_app_search_prefix_summary"
            android:defaultValue="%"
            android:inputType="text" />
        <Preference
            app:key="app_launcher_reset_usage_ranking"
            app:title="@string/settings_reset_usage_ranking_title"
            app:summary="@string/settings_reset_usage_ranking_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_home_behavior_header">
        <Preference
            app:key="app_launcher_set_home"
            app:title="@string/settings_set_default_launcher_title"
            app:summary="@string/settings_set_default_launcher_summary" />
        <ListPreference
            app:key="app_launcher_az_lock_method"
            app:title="@string/settings_double_tap_action_title"
            app:summary="@string/settings_double_tap_action_summary"
            android:defaultValue="off"
            app:entries="@array/app_launcher_az_lock_method_entries"
            app:entryValues="@array/app_launcher_az_lock_method_values"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="app_launcher_help"
            app:title="@string/help_settings_title"
            app:summary="@string/help_settings_summary" />
        <SwitchPreferenceCompat
            app:key="show_in_recents_when_not_default"
            app:title="@string/settings_show_recents_title"
            app:summary="@string/settings_show_recents_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
