<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_terminal_key_row_header">
        <Preference
            app:key="edit_extra_keys_row"
            app:persistent="false"
            app:fragment="com.termux.app.fragments.settings.termux.ExtraKeysEditorFragment"
            app:title="@string/settings_edit_extra_keys_title"
            app:summary="@string/settings_edit_extra_keys_summary" />
        <SwitchPreferenceCompat
            app:key="extra_keys_text_all_caps"
            app:title="@string/settings_extra_keys_all_caps_title"
            app:summary="@string/settings_extra_keys_all_caps_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_input_method_header">
        <ListPreference
            app:key="keyboard_input_method"
            app:title="@string/settings_on_screen_keyboard_title"
            app:entries="@array/settings_keyboard_input_method_entries"
            app:entryValues="@array/settings_keyboard_input_method_values"
            app:defaultValue="built_in"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="in_app_keyboard_hide_on_hardware"
            app:title="@string/settings_hide_keyboard_hardware_title"
            app:summary="@string/settings_hide_keyboard_hardware_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:key="keyboard_layout" app:title="@string/settings_layout_header">
        <MultiSelectListPreference
            app:key="in_app_keyboard_extra_keys"
            app:summary="@string/settings_extra_keys_summary"
            app:title="@string/settings_extra_keys_title" />
        <Preference
            app:key="in_app_keyboard_custom_layout"
            app:summary="@string/termux_in_app_keyboard_custom_layout_summary"
            app:title="@string/termux_in_app_keyboard_custom_layout_title" />
        <Preference
            app:key="in_app_keyboard_layouts"
            app:fragment="com.termux.app.fragments.settings.termux.KeyboardLayoutsFragment"
            app:persistent="false"
            app:summary="@string/settings_keyboard_layouts_summary"
            app:title="@string/settings_keyboard_layouts_title" />
        <Preference
            app:key="keyboard_docs_layouts"
            app:summary="@string/termux_keyboard_docs_layouts_summary"
            app:title="@string/settings_layout_documentation_title" />
        <Preference
            app:key="keyboard_docs_keys"
            app:summary="@string/termux_keyboard_docs_keys_summary"
            app:title="@string/settings_supported_keys_title" />
    </PreferenceCategory>

    <PreferenceCategory app:key="keyboard_shapes" app:title="@string/settings_keyboard_shapes_header">
        <com.termux.app.fragments.settings.SegmentedPillPreference
            app:key="in_app_keyboard_form"
            app:title="@string/settings_keyboard_form_title"
            app:summary="@string/settings_keyboard_form_summary"
            app:defaultValue="docked" />
        <SeekBarPreference
            app:key="in_app_keyboard_floating_width"
            app:title="@string/settings_keyboard_floating_width_title"
            app:summary="@string/settings_keyboard_floating_width_summary"
            android:defaultValue="90"
            app:min="35"
            android:max="100"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            app:key="in_app_keyboard_floating_height"
            app:title="@string/settings_keyboard_floating_height_title"
            app:summary="@string/settings_keyboard_floating_height_summary"
            android:defaultValue="100"
            app:min="60"
            android:max="160"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            app:key="in_app_keyboard_split_gap"
            app:title="@string/settings_keyboard_split_gap_title"
            app:summary="@string/settings_keyboard_split_gap_summary"
            android:defaultValue="12"
            app:min="0"
            android:max="45"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:key="keyboard_typing" app:title="@string/settings_typing_header">
        <SwitchPreferenceCompat
            app:key="in_app_keyboard_tap_correction"
            app:title="@string/settings_keyboard_tap_correction_title"
            app:summary="@string/settings_keyboard_tap_correction_summary"
            android:defaultValue="false" />
        <Preference
            app:key="in_app_keyboard_tap_correction_reset"
            app:persistent="false"
            app:title="@string/settings_keyboard_tap_correction_reset_title" />
    </PreferenceCategory>

    <PreferenceCategory app:key="keyboard_feedback" app:title="@string/settings_feedback_header">
        <SwitchPreferenceCompat
            app:key="in_app_keyboard_haptics_enabled"
            app:summary="@string/termux_in_app_keyboard_haptics_summary"
            app:title="@string/settings_haptic_feedback_title" />
        <SwitchPreferenceCompat
            app:key="in_app_keyboard_key_sound_enabled"
            app:summary="@string/termux_in_app_keyboard_key_sound_summary"
            app:title="@string/settings_keypress_sound_title" />
        <SwitchPreferenceCompat
            app:key="in_app_keyboard_key_popup"
            app:defaultValue="true"
            app:summary="@string/termux_in_app_keyboard_key_popup_summary"
            app:title="@string/settings_key_popup_title" />
    </PreferenceCategory>

    <PreferenceCategory app:key="keyboard_credits" app:title="@string/settings_keyboard_credits_header">
        <Preference app:key="keyboard_credits_text" app:selectable="false"
            app:summary="@string/termux_keyboard_credits_summary" app:title="@string/termux_keyboard_credits_text" />
        <Preference app:key="keyboard_credits_github" app:title="@string/termux_keyboard_credits_github_title" />
        <Preference app:key="keyboard_credits_play" app:title="@string/termux_keyboard_credits_play_title" />
    </PreferenceCategory>

</PreferenceScreen>
