<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_clock_status_header">
        <ListPreference
            app:key="top_pane_clock_style"
            app:title="@string/settings_clock_style_title"
            app:entries="@array/termux_top_pane_clock_style_entries"
            app:entryValues="@array/termux_top_pane_clock_style_values"
            app:defaultValue="slab"
            app:useSimpleSummaryProvider="true" />
        <com.termux.app.fragments.settings.SegmentedPillPreference
            app:key="top_pane_clock_alignment"
            app:title="@string/settings_clock_alignment_title"
            app:summary="@string/settings_clock_alignment_summary"
            app:defaultValue="left" />
        <SwitchPreferenceCompat
            app:key="top_pane_clock_am_pm"
            app:title="@string/settings_use_12_hour_title"
            app:summary="@string/settings_use_12_hour_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="status_widget_cpu"
            app:title="@string/settings_cpu_usage_title"
            app:summary="@string/termux_status_widget_cpu_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="status_widget_ram"
            app:title="@string/settings_memory_usage_title"
            app:summary="@string/settings_memory_usage_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="status_widget_weather"
            app:title="@string/settings_weather_title"
            app:summary="@string/settings_weather_summary"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="status_widget_weather_fahrenheit"
            app:title="@string/settings_weather_fahrenheit_title"
            app:summary="@string/settings_weather_fahrenheit_summary"
            app:defaultValue="false"
            app:dependency="status_widget_weather" />
        <Preference
            app:key="top_pane_notification_access"
            app:persistent="false"
            app:title="@string/termux_top_pane_notification_access_title"
            app:summary="@string/termux_top_pane_notification_access_summary" />
        <Preference
            app:key="essential_notification_rules_manage"
            app:persistent="false"
            app:title="@string/settings_essential_notifications_title"
            app:summary="@string/settings_essential_notifications_summary" />
    </PreferenceCategory>

</PreferenceScreen>
